# coder-skill-scanner

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .shellcheckrc  AGENTS.md  CODEOWNERS  Makefile  README.md  config.yaml  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: scanner-down.md
.github/workflows/: ci.yaml  prune.yaml  scan.yaml
docs/: CALIBRATION.md
scanner/: __init__.py  __main__.py  _carry_history.py  aggregate.py  api.py  badges.py  cli.py  combine.py  enumerate.py  history.py  verdict.py
schema/: report.schema.json
scripts/: .gitkeep  gen_rule_catalog.py
site/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
site/.storybook/: main.ts  preview.tsx
site/public/: 404.html  CNAME
site/src/: App.tsx  main.tsx  router.tsx  styles.css
site/src/components/KPI/: KPI.tsx
site/src/components/Layout/: Layout.tsx
site/src/components/MetaStrip/: MetaStrip.tsx
site/src/components/RiskBar/: RiskBar.stories.tsx  RiskBar.tsx
site/src/lib/: api.ts  cn.ts  format.test.ts  format.ts  query.ts  skillspectorRules.generated.ts  useHistorySparkline.ts  usePageTitle.ts
site/src/pages/: HistoryPage.tsx  HistorySnapshotPage.tsx  NotFoundPage.tsx  OverviewPage.tsx  SkillDetailPage.tsx
site/src/types/: report.ts
testdata/: .gitkeep
tests/: conftest.py  test_aggregate.py  test_api.py  test_badges.py  test_combine.py  test_enumerate.py  test_history.py  test_verdict.py
web/: index.html
(+9 files in other folders)
